style: finished styling of page except a bug with the form (orange rectangle's background color overlaps the form)

--- a/styles/Inputpage.module.css
+++ b/styles/Inputpage.module.css
@@ -3,21 +3,9 @@
   flex-direction: row;
   justify-content: space-around;
   margin-top: 6%;
-}
-/* .imgcontainer { */
 
-/* position:fixed;
-    height: auto;
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding:0;
-    border: 1px solid black;
-    left: 10%;
-    top: 20%;
-    z-index: 99; */
-/* } */
+}
+
 
 .pagetwoimg {
   border: 4px solid black !important;
@@ -25,6 +13,8 @@
   width: 20%;
   border-radius: 5rem;
   z-index: 1;
+  position: absolute;
+  margin-right: 56%;
 
 
 }
@@ -34,24 +24,40 @@
   width: 20%;
   border: 4px solid black !important;
   border-radius: 5rem;
-  z-index: 2;
+  z-index: 3;
+  position: absolute;
+  margin-right: 30%;
+  margin-top: 5%;
+
+ 
+
 }
 
 .pagetwoimg3 {
-  height:60%;
-  width:30%;
+  height:auto;
+  width:28%;
   border: 4px solid black !important;
   border-radius: 5rem;
-  z-index: 3;
+  z-index: 2;
+  position: absolute;
+  margin-right: 3%;
+  margin-top: 4%;
+
+}
+
+.form {
+    margin-left: 50%;
+    z-index: 2;
 }
 
 .bottomdiv {
   position: fixed;
   bottom: 0;
-  width: 100vw;
-  height: 20vh;
+  width: 100%;
+  height: 50vh;
   background-color: var(--color-btn);
   border: 4px solid black;
+  z-index: 0;
 }
 
 /* MEDIA QUERIES (SMALL DEVICES)  */
